# RFE-Standards

./: .gitignore  README.md  overrides.yaml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: rfc3986-uri.ast.json  rfc3986-uri.hits.json  rfc3986-uri.pruned.json  rfc5280-x509.ast.json  rfc5280-x509.hits.json  rfc5280-x509.pruned.json
core/: Cargo.toml
core/crates/mvs-cli/: Cargo.toml
core/crates/mvs-cli/src/: main.rs
core/crates/mvs-cli/tests/: cli.rs
core/crates/mvs-core/: Cargo.toml
core/crates/mvs-core/src/: der.rs  lib.rs  telemetry.rs
core/crates/mvs-refparse/: Cargo.toml
core/crates/mvs-refparse/src/: lib.rs
core/crates/mvs-refparse/tests/: conformance.rs
core/crates/mvs-schema/: Cargo.toml
core/crates/mvs-schema/src/: lib.rs
corpus/: uri-sample.txt
corpus/certs/: sample-cert.der
docs/: CORPUS-PLAN.md  PLAN.md  TICKETS.md  collector.md  overrides.md  rfe.md  telemetry.md
docs/adr/: 0001-technology-stack.md
mvs/: rfc3986-uri.mvs.abnf  rfc5280-x509.mvs.asn1
pipeline/mvs_pipeline/: __init__.py  abnf.py  asn1.py  astbuild.py  codegen.py  corpus.py  ct.py  hitsmerge.py  overrides.py  overrides.yaml  provenance.py  pruner.py  schema.py
pipeline/mvs_pipeline/collector/: __init__.py  base.py  commoncrawl.py  dedup.py  filelist.py  http.py  normalize.py  orchestrate.py  psl.py  sampler.py  wat.py  wikipedia.py
pipeline/mvs_pipeline/grammars/: rfc3986.abnf  rfc5280.asn1
pipeline/mvs_pipeline/schemas/: ast.schema.json  hits.schema.json  rfe-submission.schema.json
pipeline/tests/: test_abnf.py  test_asn1.py  test_codegen.py  test_collector_commoncrawl.py  test_collector_dedup.py  test_collector_http.py  test_collector_orchestrate.py  test_collector_sampler.py  test_collector_wat.py  test_collector_wikipedia.py  test_corpus.py  test_ct.py  test_hitsmerge.py  test_overrides.py  test_provenance.py  test_pruner.py  test_schemas.py  test_spec.py  test_usage_fraction.py
pipeline/tests/fixtures/e2e/: diverse_uris.txt  seed_uris.txt
rfe-service/rfe_service/: __init__.py  app.py  ingest.py  rerun.py
rfe-service/tests/: test_app.py  test_ingest.py  test_meets_threshold.py  test_rerun.py
schemas/: README.md  hits.schema.json  overrides.schema.json  pruned.schema.json
schemas/examples/: overrides.yaml  uri.ast.json  uri.hits.json  uri.pruned.json
schemas/examples/invalid/: overrides-missing-justification.yaml
spec/rfc3986-uri/: README.md  RFE-3986.md  hits.json  pruned.json  rfc3986-uri.mvs.abnf
testdata/: sample-cert.b64
