[project]
name = "rfe-standards-pipeline"
version = "0.0.0"
description = "Dev-time tooling for the MVS/RFE framework: AST extraction, corpus ingestion, pruner, and RFE service."
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"

# Runtime deps are added per-ticket (abnf, asn1crypto, fastapi, ...).
dependencies = [
    "jsonschema>=4.20",
    "PyYAML>=6",
    "fastapi>=0.110",
    "pyarrow>=15",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# The two Python components live in their own top-level dirs; point setuptools
# at them explicitly so flat-layout auto-discovery doesn't trip over core/ etc.
# Restrict to the real packages so test dirs (and their fixture subdirs, which
# aren't packages) are never mistaken for distributable packages.
where = ["pipeline", "rfe-service"]
include = ["mvs_pipeline*", "rfe_service*"]

[tool.setuptools.package-data]
# Ship vendored data with the wheel: grammar files, the JSON Schema definitions,
# and the Public Suffix List. Keeping these inside the package means they resolve
# adjacent to their modules under any install layout, not just a source checkout.
mvs_pipeline = [
    "grammars/*.abnf",
    "grammars/*.asn1",
    "schemas/*.schema.json",
    "collector/data/*.dat",
    "overrides.yaml",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["pipeline", "rfe-service"]

[tool.ruff.lint]
# Sensible, non-noisy default set: pyflakes, pycodestyle, isort, bugbear,
# pyupgrade, comprehensions.
select = ["E", "F", "I", "B", "UP", "C4"]

[tool.pytest.ini_options]
# Both Python components live in their own top-level dirs; expose them to imports.
pythonpath = ["pipeline", "rfe-service"]
testpaths = ["pipeline", "rfe-service"]
addopts = "-ra"
