[package]
name = "mvs-cli"
description = "Native CLI that runs the instrumented parser core over a corpus and emits hits.json."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "mvs-telemetry"
path = "src/main.rs"

[dependencies]
mvs-core = { path = "../mvs-core" }
mvs-schema = { path = "../mvs-schema" }
serde_json = "1"
